# latex-solver

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: lib.rs  main.cpp  main.rs
src/ast/: expr.rs  mod.rs  visitor.rs
src/ast/nodes/: binary.rs  function.rs  mod.rs  number.rs  symbol.rs
src/common/: error.rs  mod.rs  pretty.rs  span.rs  utils.rs
src/core/ast/: binary.h  equation.h  expr.h  function.h  number.h  symbol.h
src/core/common/: context.h  error.h  evaluator.h  parser.h
src/core/eval/: evaluator.cpp  evaluator.h
src/core/lexer/: lexer.h  token.h
src/core/parser/: parser.cpp  parser.h
src/core/rewrite/: simplify.h
src/core/rewrite/passes/: simplify.cpp  simplify.h
src/core/solver/algebra/: linear_solver.cpp  linear_solver.h  quadratic_solver.cpp  quadratic_solver.h
src/frontend/lexer/: commands.rs  lexer.rs  mod.rs  token.rs
src/latex/lexer/: lexer.h  token.h
src/tests/: CMakeLists.txt  mod.rs  pretty_error_tests.rs  test_arithmetic.cpp  test_errors.cpp  test_latex_operators.cpp  test_lexer.cpp  test_parser.cpp  test_simplify.cpp  test_solver.cpp  test_sqrt.cpp  test_variables.cpp
